--- a/templates/about.html
+++ b/templates/about.html
@@ -21,14 +21,15 @@
               into the LotW site in the background. Then the page you requested is downloaded and reformatted for 
 		          your phone.</p>
 
-<!--//                <h2>What's next for Mobile LotW?</h2>  
-                <p>I'm currently testing a new feature where Mobile LotW sends you an email when you receive a new QSL
-		   through LotW. Personally, I'm loving it. I'm trying to figure out how to make this available to 
-		  Mobile LotW users in a way that doesn't break the bank.</p>
+<!--//         <h2>What's next for Mobile LotW?</h2>  
+               <p>I'm currently testing a new feature where Mobile LotW sends you an email when you receive a new QSL
+		           through LotW. Personally, I'm loving it. I'm trying to figure out how to make this available to 
+		           Mobile LotW users in a way that doesn't break the bank.</p>
 //-->
                 <h2>How do I get involved in Mobile LotW?</h2>  
                 <p>Mobile LotW is open source software, built with Python and Flask, which means you can 
-                  contribute to its development! Check out the Mobile LotW repo on GitHub (link coming soon).
+                  contribute to its development! Check out the Mobile LotW repo on 
+                  <a href="https://github.com/kalendar/mobile_lotw"></a>GitHub</a>.
                 </p> 
 
 
