--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                   <a class="nav-link" href="/waz">WAZ</a>
                   <a class="nav-link" href="/find">Find Call</a>
                   <a class="nav-link" href="/about">About Mobile LotW</a>
-                  <a class="nav-link" href="https://paypal.me/opencontent">Donate to Mobile LotW</a>
+                  <a class="nav-link" href="https://paypal.me/opencontent">Support Mobile LotW</a>
                   <a class="nav-link" href="/logout">Logout</a>
                 </div>
               </div>
