--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
                <h2>How do I get involved in Mobile LotW?</h2>  
                <p>Mobile LotW is open source software, built with Python and Flask, which means you can 
                contribute to its development! Check out the Mobile LotW repo on 
-               <a href="https://github.com/kalendar/mobile_lotw"></a>GitHub</a>. If you have problems with
+               <a href="https://github.com/kalendar/mobile_lotw">GitHub</a>. If you have problems with
                Mobile LotW, submit an Issue on Github. And if you have an idea for a new feature, you can 
                suggest it the same way. Better yet, you can code up the improvement or new feature yourself
                and submit a pull request! 
