--- a/app/templates/qsl_details.html
+++ b/app/templates/qsl_details.html
@@ -4,16 +4,19 @@
 <table class="table ">
   <tbody>
     {% for qsl_detail in qsl_details %}
+
     <tr>
-      <td style="text-align: left; background-color: #e3f2fd;"">            
-        <b>{{qsl_detail.label}}</b>
-      </td>
-      <td style="text-align: left; background-color: #e3f2fd;">            
-      {{qsl_detail.value}}
-      </td>
+    <td style="text-align: left; {% if qsl_detail.label == 'Call Sign' %} background-color: #e3f2fd;
+    {% elif qsl_detail.label == 'Worked' %} background-color: #e3f2fd; {% endif %}">            
+    <b>{{ qsl_detail.label }}</b></td>
+    
+    <td style="text-align: left; {% if qsl_detail.label == 'Call Sign' %} background-color: #e3f2fd;
+    {% elif qsl_detail.label == 'Worked' %} background-color: #e3f2fd; {% endif %}">            
+    {{ qsl_detail.value }}</td>
     </tr>
     {% endfor %}
+
+
   </tbody>
 </table>
 {% endblock %}
-
