Parser module, caching tables in session
- Cache most common tables in session object
    - Does NOT cache QSL, or Triple
- Create a parser module to separate parsing logic
    - Improve table selection accuracy
- Create a generic parser function to parse many types of awards via route
- Move find/qsodetail
- Create a utils file
    - Checks if session cached obj is expired
    - Gets awards details from session if valid, or parses
- Move awards dataclass to app root
- Add rudimentary .env checks to app.__init__.py

--- a/app/templates/award.html
+++ b/app/templates/award.html
@@ -23,7 +23,12 @@
     {% endfor %}
   </tbody>
 </table>
-
+{% if parsed_at %}
+<p>Information last updated at {{parsed_at}}</p> 
+<a href="{{force_reload}}">Force update.</a>
+{% endif %}
+<br>
+<br>
 <a href="{{page_url}}" target="_new"><em>See full details on LotW</em></a> 
 {% endblock %}
 
