Updates for prod and page formatting post refactor

--- a/app/templates/qsls.html
+++ b/app/templates/qsls.html
@@ -30,5 +30,5 @@
   </tbody>
 </table>
 
-<a href="{{qsls_page_url}}" target="_new"><em>See full details on LotW</em></a>
+<a href="{{qsls_page_url}}" target="_new"><em>See full details on LotW</em></a>.
 {% endblock %}
