--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -48,7 +48,7 @@
 
   <h2>I love Mobile LotW! How can I support it?</h2>
   <p>
-    You can support Mobile LotW by sending a donation via
+    You can support Mobile LotW by contributing code or by sending a donation via
     <a href="https://paypal.me/opencontent">PayPal</a>.
   </p>
 </div>
