Big changes in summary:
- Alembic base files
- Move from g.web_session to lotw file
    - Theoretically better failure handling, DRY
- Store lotw cookies in DB, encrypted with env key
- Cache map markers in DB
- Add popups to map
- Cache qsls w/ DB
- Import qsls from LoTW on first login/cache expiration
- Updated requirements
- Changed DB User structure

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -16,3 +16,16 @@ td {
 .center{
   text-align: center;
 }
+
+#map {
+  min-height: 0;
+  height: 90vh;
+}
+
+#map .leaflet-popup-content p{
+  margin: 0.5rem 0;
+}
+
+#map .leaflet-popup-content p{
+  margin: 0.5rem 0;
+}
