Add reload for map data, revert URI arg for qsls, hide date/time

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -29,3 +29,9 @@ td {
 #map .leaflet-popup-content p{
   margin: 0.5rem 0;
 }
+
+@media only screen and (max-device-width: 812px) { 
+    .for_big_screens{
+      display: none;
+    }
+}
