--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="{{url_for('awards.wpx')}}">WPX</a>
         <a class="nav-link" href="{{url_for('awards.waz')}}">WAZ</a>
         <a class="nav-link" href="{{url_for('awards.find')}}">Find Call</a>
-        <a class="nav-link" href="{{url_for('map.view')}}">Map</a>
+        <a class="nav-link" href="{{url_for('map.view')}}">Map <i class="fa-solid fa-location-dot"></i></a>
         {% endif %}
         <a class="nav-link" href="{{url_for('about')}}">About Mobile LotW</a>
         <a class="nav-link" href="https://paypal.me/opencontent"
