Formatting / language changes.

--- a/app/templates/qsls.html
+++ b/app/templates/qsls.html
@@ -7,7 +7,7 @@
       <th>Worked</th>
       <th>Band</th>
       <th>Mode</th>
-      <th class="for_big_screens">QSO Timestamp</th>
+      <th class="for_big_screens">Date/Time</th>
       <th>QSL</th>
     </tr>
   </thead>
