--- a/app/templates/import_qsos_data.html
+++ b/app/templates/import_qsos_data.html
@@ -1,8 +1,15 @@
 {% extends "index.html" %} 
 
 {% block content %}
-<h1>We're importing your data from LoTW...</h1>
-<h2>This can take a long time, please wait til we're done!</h2>
+
+<p><h2>Importing data from LotW.</h2></p>
+<p><h2>This may take up to 3 minutes.</h2></p>
+<p>This import only happens the first time you login to Mobile LotW.</p>
+<p>The page will reload automatically when the import finishes.</p>
+<div class="spinner-grow text-primary" role="status">
+    <span class="sr-only">Loading...</span>
+</div>
+
 {% endblock %} 
 
 {% block scripts %}
