--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -41,8 +41,8 @@
 
   <h2>Who made Mobile LotW?</h2>
   <p>
-    I'm David, WV8O. You can find me on
-    <a href="https://www.qrz.com/db/wv8edu">QRZ</a>. Please send questions or
+    Mobile LotW is made by David Wiley, <a href="https://www.qrz.com/db/wv8edu">WV8O</a>,
+    and Josh Maddy. Please send questions or
     comments about Mobile LotW to info at mobilelotw.org.
   </p>
 
