--- a/app/templates/award.html
+++ b/app/templates/award.html
@@ -1,33 +1,39 @@
 {% extends "index.html" %}
 
 {% block content %}
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>{{award_name}} Award</th>
-      <th>New QSLs</th>
-      <th>QSLs In Process</th>
-      <th>Credits Awarded</th>
-      <th>Total</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for award in awards %}
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td>{{award.award|safe}}</td>
-        <td>{{award.new}}</td>
-        <td>{{award.in_process}}</td>
-        <td>{{award.awarded}}</td>
-        <td>{{award.total}}</td>
+        <th>{{ award_name }} Award</th>
+        <th>New QSLs</th>
+        <th>QSLs In Process</th>
+        <th>Credits Awarded</th>
+        <th>Total</th>
       </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      {% for award in awards %}
+        <tr>
+          <td>{{ award.award|safe }}</td>
+          <td>{{ award.new }}</td>
+          <td>{{ award.in_process }}</td>
+          <td>{{ award.awarded }}</td>
+          <td>{{ award.total }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
-<p><a href="{{page_url}}" target="_new"><em>See full details on LotW</em></a>.</p> 
+  <p>
+    <a href="{{ page_url }}" target="_new"><em>See full details on LotW</em></a
+    >.
+  </p>
 
-{% if parsed_at %}
-<p>Info downloaded at {{parsed_at}}. <a href="{{force_reload}}">Update now.</a></p>
-<br>
-{% endif %}
+  {% if parsed_at %}
+    <p>
+      Info downloaded at {{ parsed_at }}.
+      <a href="{{ force_reload }}">Update now.</a>
+    </p>
+    <br />
+  {% endif %}
 {% endblock %}
