--- a/app/templates/find.html
+++ b/app/templates/find.html
@@ -2,15 +2,17 @@
 
 {% block content %}
   {% if results %}
-  {{results|safe}}
+    {{ results|safe }}
   {% else %}
-  {{error_msg}}
-  <br />
-  <div class="center">
-    <form action="/find" method="POST" name="actform">
-      <p><INPUT type="text" name="act" size=20 class = "form-control-lg"/></p>
-      <p><INPUT type="submit" value="Look for call sign"></p>
-    </form>
-  </div>
+    {{ error_msg }}
+    <br />
+    <div class="center">
+      <form action="/find" method="POST" name="actform">
+        <p>
+          <input type="text" name="act" size="20" class="form-control-lg" />
+        </p>
+        <p><input type="submit" value="Look for call sign" /></p>
+      </form>
+    </div>
   {% endif %}
 {% endblock %}
