--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,29 +1,26 @@
-{% extends "index.html" %} 
+{% extends "index.html" %}
 
 {% block content %}
-<br />
-<form action="#" method="post">
-  <p>
-    <input
-      type="text"
-      name="login"
-      placeholder="Your callsign"
-      class="form-control-lg"
-    />
-  </p>
-  <p>
-    <input 
-      type="password" 
-      name="password" 
-      placeholder="Your LotW password"
-      class="form-control-lg" 
-    />
-  </p>
-  <p>
-    <input 
-      type="submit" 
-      value="Login"
-    />
-  </p>
-</form>
+  <br />
+  <form action="#" method="post">
+    <p>
+      <input
+        type="text"
+        name="login"
+        placeholder="Your callsign"
+        class="form-control-lg"
+      />
+    </p>
+    <p>
+      <input
+        type="password"
+        name="password"
+        placeholder="Your LotW password"
+        class="form-control-lg"
+      />
+    </p>
+    <p>
+      <input type="submit" value="Login" />
+    </p>
+  </form>
 {% endblock %}
