--- a/app/templates/qsls.html
+++ b/app/templates/qsls.html
@@ -1,33 +1,44 @@
 {% extends "index.html" %}
 
 {% block content %}
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Worked</th>
-      <th>Band</th>
-      <th>Mode</th>
-      <th class="for_big_screens">Date/Time</th>
-      <th>QSL</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for qsl, seen in qsl_tuples %}
-    <tr>
-      <td class="{{"new_contact" if not seen}}">{{ qsl.call }}</td>
-      <td class="{{"new_contact" if not seen}}">{{ qsl.band }}</td>
-      <td class="{{"new_contact" if not seen}}">{{ qsl.mode }}</td>
-      <td class="for_big_screens {{"new_contact" if not seen}}">{{ qsl.app_lotw_qso_timestamp }}</td>
-      <td class="{{"new_contact" if not seen}}"><a href="{{url_for("awards.qsodetail", id=qsl.id)}}">Details</a></td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Worked</th>
+        <th>Band</th>
+        <th>Mode</th>
+        <th class="for_big_screens">Date/Time</th>
+        <th>QSL</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for qsl, seen in qsl_tuples %}
+        <tr>
+          <td class="{{ "new_contact" if not seen }}">{{ qsl.call }}</td>
+          <td class="{{ "new_contact" if not seen }}">{{ qsl.band }}</td>
+          <td class="{{ "new_contact" if not seen }}">{{ qsl.mode }}</td>
+          <td class="for_big_screens {{ "new_contact" if not seen }}">
+            {{ qsl.app_lotw_qso_timestamp }}
+          </td>
+          <td class="{{ "new_contact" if not seen }}">
+            <a href="{{ url_for("awards.qsodetail", id=qsl.id) }}">Details</a>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
-<p><a href="{{qsls_page_url}}" target="_new"><em>See full details on LotW</em></a>.</p> 
+  <p>
+    <a href="{{ qsls_page_url }}" target="_new"
+      ><em>See full details on LotW</em></a
+    >.
+  </p>
 
-{% if parsed_at %}
-<p>Info downloaded at {{parsed_at}}. <a href="{{force_reload}}">Update now.</a></p>
-<br>
-{% endif %}
+  {% if parsed_at %}
+    <p>
+      Info downloaded at {{ parsed_at }}.
+      <a href="{{ force_reload }}">Update now.</a>
+    </p>
+    <br />
+  {% endif %}
 {% endblock %}
