--- a/app/templates/triple.html
+++ b/app/templates/triple.html
@@ -1,31 +1,38 @@
 {% extends "index.html" %}
 
 {% block content %}
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>State</th>
-      <th>CW</th>
-      <th>Phone</th>
-      <th>Digital</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for triple in triples %}
-    <tr>
-      <td>{{ triple.state }}</td>
-      <td>{{ triple.cw | safe }}</td>
-      <td>{{ triple.phone | safe }}</td>
-      <td>{{ triple.digital | safe }}</td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>State</th>
+        <th>CW</th>
+        <th>Phone</th>
+        <th>Digital</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for triple in triples %}
+        <tr>
+          <td>{{ triple.state }}</td>
+          <td>{{ triple.cw | safe }}</td>
+          <td>{{ triple.phone | safe }}</td>
+          <td>{{ triple.digital | safe }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
-<p><a href="{{triple_page_url}}" target="_new"><em>See full details on LotW</em></a>.</p> 
+  <p>
+    <a href="{{ triple_page_url }}" target="_new"
+      ><em>See full details on LotW</em></a
+    >.
+  </p>
 
-{% if parsed_at %}
-<p>Info downloaded at {{parsed_at}}. <a href="{{force_reload}}">Update now.</a></p>
-<br>
-{% endif %}
+  {% if parsed_at %}
+    <p>
+      Info downloaded at {{ parsed_at }}.
+      <a href="{{ force_reload }}">Update now.</a>
+    </p>
+    <br />
+  {% endif %}
 {% endblock %}
