Updates to about.html

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,11 +5,11 @@
     <h2>Why did you make Mobile LotW?</h2>
     <p>
       Soon after I earned my General license in 2021 I became frustrated by how
-      difficult it is to use the ARRL's
-      <a href="http://lotw.arrl.org/">Logbook of the World</a> website on mobile
-      phones. After waiting a few years for the ARRL to fix the problem, I
-      decided to fix it for myself. Then, as I got into the project, I figured
-      why not share my fix with others? The result is Mobile LotW.
+      difficult it is to use the ARRL's <a href="http://lotw.arrl.org/">Logbook 
+      of the World</a> website on mobile phones. After waiting a few years for 
+      the ARRL to fix the problem, I decided to fix it for myself. Then, as I 
+      got into the project, I figured why not share my fix with others? The 
+      result is Mobile LotW.
     </p>
 
     <h2>How does Mobile LotW work?</h2>
@@ -20,13 +20,12 @@
       to you. That's it!
     </p>
 
-    <h2>Does Mobile LotW store my LotW password?</h2>
+    <h2>Who is Mobile LotW?</h2>
     <p>
-      Mobile LotW does NOT store your LotW password. When you enter your LotW
-      username and password into Mobile LotW and click the Login button, your
-      username and password is used to log you into the LotW site in the
-      background. Then the page you requested is downloaded and reformatted for
-      your phone.
+      Mobile LotW was orignally made by <a href="https://davidwiley.org/">David 
+      Wiley</a>, <a href="https://www.qrz.com/db/wv8edu">WV8O</a>, and is now 
+      maintained by David and <a href="https://joshuamaddy.github.io/">Josh Maddy</a>.
+      Isn't open source wonderful?
     </p>
 
     <h2>How do I get involved in Mobile LotW?</h2>
@@ -34,23 +33,17 @@
       Mobile LotW is open source software, built with Python and Flask, which
       means you can contribute to its development! Check out the Mobile LotW
       repo on <a href="https://github.com/kalendar/mobile_lotw">GitHub</a>. If
-      you have problems with Mobile LotW, submit an Issue on Github. And if you
-      have an idea for a new feature, you can suggest it the same way. Better
-      yet, you can code up the improvement or new feature yourself and submit a
-      pull request!
-    </p>
-
-    <h2>Who made Mobile LotW?</h2>
-    <p>
-      Mobile LotW is made by David Wiley,
-      <a href="https://www.qrz.com/db/wv8edu">WV8O</a>, and Josh Maddy. Please
-      send questions or comments about Mobile LotW to info at mobilelotw.org.
+      you have an idea for a new feature or a problem that needs solved, you can 
+      <a href="https://github.com/kalendar/mobile_lotw/issues">submit an issue</a> 
+      on Github. Better yet, you can code up the improvement or new feature 
+      yourself and submit a pull request!
     </p>
 
     <h2>I love Mobile LotW! How can I support it?</h2>
     <p>
-      You can support Mobile LotW by contributing code or by sending a donation
-      via
+      You can support Mobile LotW by contributing code to 
+      <a href="https://github.com/kalendar/mobile_lotw">GitHub</a> or by 
+      sending a donation via
       <a href="https://paypal.me/opencontent">PayPal</a>.
     </p>
   </div>
