Footer and Privacy updates

--- a/app/templates/award.html
+++ b/app/templates/award.html
@@ -32,8 +32,9 @@
   {% if parsed_at %}
     <p>
       Info downloaded at {{ parsed_at }}.
-      <a href="{{ force_reload }}">Update now.</a>
+      <a href="{{ force_reload }}">Refresh now.</a>
     </p>
     <br />
   {% endif %}
+
 {% endblock %}
