--- a/app/templates/import_qsos_data.html
+++ b/app/templates/import_qsos_data.html
@@ -4,8 +4,8 @@
 
 <p><h2>Importing data from LotW.</h2></p>
 <p><h2>This may take up to 3 minutes.</h2></p>
-<p>This import only happens the first time you login to Mobile LotW.</p>
-<p>The page will reload automatically when the import finishes.</p>
+<p>This import only happens the first time <br /> you login to Mobile LotW.</p>
+<p>The page will reload automatically <br />when the import finishes.</p>
 <div class="spinner-grow text-primary" role="status">
     <span class="sr-only">Loading...</span>
 </div>
