--- a/app/templates/qsls.html
+++ b/app/templates/qsls.html
@@ -37,7 +37,7 @@
   {% if parsed_at %}
     <p>
       Info downloaded at {{ parsed_at }}.
-      <a href="{{ force_reload }}">Update now.</a>
+      <a href="{{ force_reload }}">Refresh now.</a>
     </p>
     <br />
   {% endif %}
