--- a/app/templates/triple.html
+++ b/app/templates/triple.html
@@ -31,7 +31,7 @@
   {% if parsed_at %}
     <p>
       Info downloaded at {{ parsed_at }}.
-      <a href="{{ force_reload }}">Update now.</a>
+      <a href="{{ force_reload }}">Refresh now.</a>
     </p>
     <br />
   {% endif %}
