Footer formatting changes.

--- a/app/templates/award.html
+++ b/app/templates/award.html
@@ -31,7 +31,7 @@
 
   {% if parsed_at %}
     <p>
-      Info downloaded at {{ parsed_at }}.
+      Info downloaded at {{ parsed_at }}.<br />
       <a href="{{ force_reload }}">Refresh now.</a>
     </p>
     <br />
