--- a/app/templates/qsls.html
+++ b/app/templates/qsls.html
@@ -36,7 +36,7 @@
 
   {% if parsed_at %}
     <p>
-      Info downloaded at {{ parsed_at }}.
+      Info downloaded at {{ parsed_at }}.<br />
       <a href="{{ force_reload }}">Refresh now.</a>
     </p>
     <br />
