--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -17,7 +17,8 @@
       When you view a page in Mobile LotW, like the DXCC Award Info page, what
       happens behind the scenes is Mobile LotW downloads your DXCC Award Info
       page from LotW, reformats it to look nice on your phone, and then shows it
-      to you. That's it!
+      to you. For more information about how we handle your data, see our 
+      <a href="/privacy">Privacy Policy</a>.
     </p>
 
     <h2>Who is Mobile LotW?</h2>
