--- a/app/templates/privacy.html
+++ b/app/templates/privacy.html
@@ -31,7 +31,7 @@
 
 <p><strong>What are your rights?</strong> Depending on where you are located geographically, the applicable privacy law may mean you have certain rights regarding your personal information. Learn more about <a data-custom-class="link" href="#privacyrights">your privacy rights</a>.</p>
 
-<p><strong>How do you exercise your rights?</strong> The easiest way to exercise your rights is by visiting info@mobilelotw.org, or by contacting us. We will consider and act upon any request in accordance with applicable data protection laws.</p>
+<p><strong>How do you exercise your rights?</strong> The easiest way to exercise your rights is by contacting info@mobilelotw.org. We will consider and act upon any request in accordance with applicable data protection laws.</p>
 
 <p>Want to learn more about what we do with any information we collect? <a data-custom-class="link" href="#toc">Review the privacy notice in full</a>.</p>
 
@@ -118,6 +118,6 @@
 <div id="contact"><strong>15. How Can You Contact Us About This Notice?</strong></p><p>If you have questions or comments about this notice, you may email us at info@mobilelotw.org
 
 <p><strong>16. How Can You Review, Update, Or Delete The Data We Collect From You?</strong></p>
-<p>Based on the applicable laws of your country, you may have the right to request access to the personal information we collect from you, change that information, or delete it. To request to review, update, or delete your personal information, please visit: info@mobilelotw.org.</p>
+<p>Based on the applicable laws of your country, you may have the right to request access to the personal information we collect from you, change that information, or delete it. To request to review, update, or delete your personal information, please contact: info@mobilelotw.org.</p>
 
 {% endblock %}
