Updating about page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -42,7 +42,7 @@
 
     <h2>I love Mobile LotW! How can I support it?</h2>
     <p>
-      You can support Mobile LotW by contributing code to 
+      You can support Mobile LotW by contributing code via 
       <a href="https://github.com/kalendar/mobile_lotw">GitHub</a> or by 
       sending a donation via
       <a href="https://paypal.me/opencontent">PayPal</a>.
