Changes to about and privacy, new delete_account page for Google Play Store.

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -14,11 +14,9 @@
 
     <h2>How does Mobile LotW work?</h2>
     <p>
-      When you view a page in Mobile LotW, like the DXCC Award Info page, what
-      happens behind the scenes is Mobile LotW downloads your DXCC Award Info
-      page from LotW, reformats it to look nice on your phone, and then shows it
-      to you. For more information about how we handle your data, see our 
-      <a href="/privacy">Privacy Policy</a>.
+      Mobile LotW downloads your QSOs from LotW and reformats them to look 
+      nice on your phone. For more information about how we handle your data, 
+      see the <a href="/privacy">Privacy Policy</a>.
     </p>
 
     <h2>Who is Mobile LotW?</h2>
