--- a/app/templates/privacy.html
+++ b/app/templates/privacy.html
@@ -121,6 +121,6 @@
 <div id="contact"><strong>15. How Can You Contact Us About This Notice?</strong></p><p>If you have questions or comments about this notice, you may email us at info@mobilelotw.org
 
 <p><strong>16. How Can You Review, Update, Or Delete The Data We Collect From You?</strong></p>
-<p>Based on the applicable laws of your country, you may have the right to request access to the personal information we collect from you, change that information, or delete it. To request the deletion of your personal information, please visit https://mobilelotw.org/delete_account.</p>
+<p>Based on the applicable laws of your country, you may have the right to request access to the personal information we collect from you, change that information, or delete it. <a href="https://mobilelotw.org/delete_account">Request the deletion of your personal information</a>.</p>
 
 {% endblock %}
