--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,4 @@
+
 .table-striped > tbody > tr:nth-child(2n + 1) > td,
 .table-striped > tbody > tr:nth-child(2n + 1) > th {
   background-color: #e3f2fd;
@@ -7,6 +8,11 @@ th,
 td {
   text-align: center;
 }
+
+.navbar-nav > li > .dropdown-menu {     background-color: #0d6efd !important;  }
+.navbar-nav > li > .dropdown-menu a{   color: #e3f2fd !important;  }
+a.dropdown-item:hover{  background-color: #0d6efd !important;}
+
 
 .new_contact *{
   color: #d84315 !important;
