Updates to about and the navbar.

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -22,7 +22,7 @@
     <h2>Who is Mobile LotW?</h2>
     <p>
       Mobile LotW was orignally made by <a href="https://davidwiley.org/">David 
-      Wiley</a>, <a href="https://www.qrz.com/db/wv8edu">WV8O</a>, and is now 
+      Wiley</a>, <a href="https://www.qrz.com/db/wv8o">WV8O</a>, and is now 
       maintained by David and <a href="https://joshuamaddy.github.io/">Josh Maddy</a>.
       Isn't open source wonderful?
     </p>
