--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -49,11 +49,11 @@
 
           <li class="nav-item">
           <a class="nav-link" href="{{ url_for('map.view') }}"
-            >QSL Map <i class="fa-solid fa-location-dot"></i
-          ></a>
+            >QSL Map <!--// i class="fa-solid fa-location-dot"></i
+          //--></a>
         </li>
         {% endif %}
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About Mobile LotW</a></li>
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
         {% if not session.logged_in %}
           <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Login</a></li>
         {% else %}
