--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,32 +1,34 @@
 {% extends "index.html" %}
 
 {% block content %}
-  <div class="container text-center mt-4">
+  <div class="container text-center mt-4" style="margin-bottom: 50px;"">
     <div class="row">
       <h1 class="display-5">
         Making LotW
         <span style="color: #1e88e5; font-weight: 700">awesome</span> on
-        smartphones
+        smartphones!
       </h1>
     </div>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <p>
+          <a href='https://play.google.com/store/apps/details?id=com.mobilelotw.v001'><img class='img-fluid' alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+        </p>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+
     <div class="row mt-3">
+      <p class="display-6">Download now to go:</p>
       <div class="col">
-        <p class="display-6">Before</p>
+        <p class="display-6">from this...</p>
         <img src="/static/lotw_old.png" class="img-fluid img-thumbnail" />
       </div>
       <div class="col">
-        <p class="display-6">After</p>
+        <p class="display-6">...to this!</p>
         <img src="/static/lotw_new.png" class="img-fluid img-thumbnail" />
       </div>
-    </div>
-    <div class="row mt-5 mb-5">
-      <p>
-        <a class="btn btn-warning btn-lg" href="/login" role="button"
-          >Get Started!&nbsp;&nbsp;<i
-            class="fa-solid fa-bolt-lightning fa-beat"
-          ></i
-        ></a>
-      </p>
-    </div>
   </div>
 {% endblock %}
