Login styling and route changes.

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,7 +20,8 @@
       />
     </p>
     <p>
-      <input type="submit" value="Login" />
+      <button class="btn btn-warning btn-lg" type="submit">Submit&nbsp;&nbsp;
+      <i class="fa-solid fa-bolt-lightning fa-beat"></i></button>
     </p>
   </form>
 {% endblock %}
