Update to Postgres requires us to reimport QSOs.

--- a/app/templates/import_qsos_data.html
+++ b/app/templates/import_qsos_data.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <p><h2>Importing data from LotW.</h2></p>
-<p><h2>This may take up to 3 minutes.</h2></p>
+<p><h2>This may take several minutes,<br />depending on the size of your log.</h2></p>
 <p>This import only happens the first time <br /> you login to Mobile LotW.</p>
 <p>The page will reload automatically <br />when the import finishes.</p>
 <div class="spinner-grow text-primary" role="status">
