--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,15 +1,15 @@
 {% extends "index.html" %}
 
 {% block content %}
-  <h1>Search for QSLs by {{ search_type }}</h1>
+  <h2>Search for QSLs by {{ search_type }}</h2>
 
   <form method="post" action="{{ url_for(endpoint) }}">
     <p>
-      <label for="query">{{ search_type }}:</label>
+      <!--// label for="query">{{ search_type }}:</label //-->
       <input type="text" id="query" name="query" value="{{query}}" required />
     </p>
     <p>
-      <input type="submit" value="Search" />
+      <input type="submit" value="Find Call in Your Log" />
     </p>
   </form>
 
