--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,10 +40,10 @@
     <title>{{ title }}</title>
 
     <link rel="shortcut icon" href="/static/favicon.ico" />
-    <link
-      rel="manifest"
-      href="{{ url_for('static', filename='manifest.json') }}"
-    />
+
+    <link rel="manifest" href="https://progressier.app/n0Vo34J7yHJFo9iCBF8H/progressier.json"/>
+    <script defer src="https://progressier.app/n0Vo34J7yHJFo9iCBF8H/script.js"></script>
+
   </head>
 
   <body>
