Final Progressier integration for PWA push notifications.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,6 +37,8 @@
 
     {% block header_links %}{% endblock %}
 
+    {{ progressier_block | safe}}
+
     <title>{{ title }}</title>
 
     <link rel="shortcut icon" href="/static/favicon.ico" />
