Backing out Progressier integration.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,14 +37,16 @@
 
     {% block header_links %}{% endblock %}
 
-    {{ progressier_block | safe}}
+    {# {{ progressier_block | safe}} #}
 
     <title>{{ title }}</title>
 
     <link rel="shortcut icon" href="/static/favicon.ico" />
 
+    <!--//
     <link rel="manifest" href="https://progressier.app/n0Vo34J7yHJFo9iCBF8H/progressier.json"/>
     <script defer src="https://progressier.app/n0Vo34J7yHJFo9iCBF8H/script.js"></script>
+    //--> 
 
   </head>
 
