Update front page.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,15 +15,15 @@
           <p>
           <a href='https://play.google.com/store/apps/details?id=com.mobilelotw.v001'><img class='img-fluid' alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
         </p>
+        <p class="display-6">Or <a href="/login">login to the web app</a>!</p>
       </div>
       <div class="col-md-4"></div>
     </div>
   </div>
 
     <div class="row mt-3">
-      <p class="display-6">Download now to go:</p>
       <div class="col">
-        <p class="display-6">from this...</p>
+        <p class="display-6">Go from this...</p>
         <img src="/static/lotw_old.png" class="img-fluid img-thumbnail" />
       </div>
       <div class="col">
