Updating the homepage.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,11 +11,12 @@
     </div>
     <div class="row">
         <div class="col-md-4"></div>
-        <div class="col-md-4">
-          <p>
+        <div class="col-md-4"><p>&nbsp;</p>
+
+          <!--// p>
           <a href='https://play.google.com/store/apps/details?id=com.mobilelotw.v001'><img class='img-fluid' alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
-        </p>
-        <p class="display-6">Or <a href="/login">login to the web app</a>!</p>
+        </p //-->
+        <p class="display-6">It's free - <a href="/login">try it now</a>!</p>
       </div>
       <div class="col-md-4"></div>
     </div>
