--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     <input
       type="password"
       name="password"
-      placeholder="Your LotW password"
+      placeholder="Your Mobile LotW password"
       class="border-gray-200 border-2 p-2 rounded-md"
     />
     <button
