--- a/src/input.css
+++ b/src/input.css
@@ -14,6 +14,11 @@
   }
 }
 
+@font-face {
+  font-family: 'password';
+  src: url(/static/text-security-disc.ttf);
+}
+
 h1 {
   font-size: x-large;
   font-weight: bold;
