--- a/templates/register.html
+++ b/templates/register.html
@@ -11,21 +11,21 @@
     <input
       type="text"
       name="mobile_lotw_username"
-      placeholder="Mobile LotW username"
+      placeholder="Choose a username"
       class="border-gray-200 border-2 p-2 rounded-md"
       required
     />
     <input
       type="password"
       name="mobile_lotw_password"
-      placeholder="Mobile LotW password"
+      placeholder="Choose a password"
       class="border-gray-200 border-2 p-2 rounded-md"
       required
     />
     <input
       type="text"
       name="lotw_username"
-      placeholder="Your LotW callsign"
+      placeholder="Enter your LOTW callsign"
       class="border-gray-200 border-2 p-2 rounded-md"
       required
     />
@@ -33,7 +33,7 @@
       type="text"
       name="password"
       id="lotw-password"
-      placeholder="Your LotW password"
+      placeholder="Enter your LotW password"
       class="border-gray-200 border-2 p-2 rounded-md"
       required
     />
