Add all awards from previous version added, authentication middleware added.
- Rename QSO -> QSL
- Initial email notification work
- Upgrade tailwind, remove config

--- a/src/input.css
+++ b/src/input.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
+@import "tailwindcss";
 @tailwind utilities;
+
 
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
