--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
   >
   <div class="flex-grow"></div>
   {% if request.session["logged_in"] %}
-    <a href="/qsos" class="text-blue-200 hover:text-white transition-colors"
+    <a href="/qsls" class="text-blue-200 hover:text-white transition-colors"
       >QSLs</a
     >
     <a href="/logout" class="text-blue-200 hover:text-white transition-colors"
