--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -52,6 +52,9 @@
             >QSL Map <!--// i class="fa-solid fa-location-dot"></i
           //--></a>
         </li>
+          {% if config.get('BILLING_UI_ENABLED', False) %}
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('billing.overview') }}">Billing</a></li>
+          {% endif %}
         {% endif %}
         <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
         {% if not session.logged_in %}
